--- a/22jan/activity1/index.html
+++ b/22jan/activity1/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Built by DevOps Team at QT</title>
+        <title>Built by rishi Team at QT</title>
     </head>
     <body style="background-color:cyan;">
-        <h1>This is Homepage</h1>
+        <h1>This is rishi Homepage</h1>
     </body>
 </html>
